# qfinder

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
icons/: icon.icns
scripts/: build-material-icons.ps1  fetch-vendor.sh
spec/stage1/: requirements.md  revision.md  target.md  tasks.md
spec/stage2/: requirements.md  target.md  tasks.md
spec/stage3/: requirements.md  target.md  tasks.md
spec/stage3.1/: requirements.md  target.md  tasks.md
src/: error.rs  main.rs  platform.rs  task.rs
src/commands/: fs_tree.rs  mod.rs  ops.rs  preview.rs  roots.rs
ui/: index.html
ui/css/: app.css
ui/icons/material/: LICENSE  manifest.json
ui/js/: app.js  icon-resolver.js  preview-docx.js  preview-pdf.js  preview.js  shortcuts.js  tauri-api.js  tree.js
