[package]
name = "qfinder"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "process", "time"] }
trash = "5"
which = "6"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
open = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
