[package]
name = "qfinder"
version = "0.1.0"
edition = "2024"
description = "qfinder - 一个轻量级的本地文件浏览与预览工具"
authors = ["qfinder"]
license = "MIT"

[package.metadata.bundle]
name = "qfinder"
identifier = "com.qfinder.app"
icon = [
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/128x128@2x.png",
    "icons/icon.icns",
    "icons/icon.png",
]
version = "0.1.0"
copyright = "Copyright (c) 2026 qfinder"
category = "public.app-category.utilities"
short_description = "本地文件浏览与预览工具"
long_description = "qfinder 是一款基于 Tauri + Rust 构建的轻量级本地文件浏览与预览工具。"
osx_minimum_system_version = "10.13"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "process", "time"] }
trash = "5"
which = "6"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
open = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
